--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.10.1",
     "mongoose": "^8.9.5"
+  },
+  "engines": {
+    "node": ">=14.x"
   }
 }
